<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HMI_Alarm" Id="{12345678-1234-5678-1234-567812345014}">
    <Declaration><![CDATA[TYPE ST_HMI_Alarm :
STRUCT
	// Runtime vÃ¦rdi
	Active          : BOOL := FALSE;     // TRUE = Alarm aktiv
	
	// Configuration
	AlarmText       : STRING(80) := '';  // Alarm besked
	AlarmPriority   : USINT := 3;        // 1=Critical, 2=High, 3=Medium, 4=Low
	Display         : ST_DisplayConfig;  // Display info
	
	// Runtime status
	Acknowledged    : BOOL := FALSE;     // HMI acknowledged
	TriggerTime     : DT;                // Timestamp alarm aktiveret
	AckTime         : DT;                // Timestamp acknowledged
	TriggerCount    : UDINT := 0;        // Antal gange aktiveret
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>